@@ -1,10 +1,13 @@
  * SWFUpload Revision 7.0 by Jacob Roberts, Sept 2007, linebyline.blogspot.com
  
  * --------- Revision 7.0 beta 3 -----------
- * + Added an "event queue".  Events are added to an array and executeEvent it called on a setTimeout. This prevents out of order issues that occur
+ * + Added an "event queue".  Events are added to an array and executeEvent is called on a setTimeout. This prevents out of order issues that occur
  *    in the Safari browser.
- * + Added a check for the UPLOAD_COMPLETE_DATA event constant which only became available in Flash Player 9.0.28.
+ * + Added a check for the UPLOAD_COMPLETE_DATA event constant which only became available in Flash Player 9.0.28.  This 
+ *    fixes the Flash Version detection (Flash Object Detection) which was accepting Flash Player 9 versions before 9.0.28.
  * - Removed old code block that was missed when moving from a Flash Timer to the JavaScript timeout (caused certain cancel events to be called twice)
+ * = Change ShowUI to the swfUploadLoaded event which will hopefully make it more clear that this is an overrideable event
+ * = Changed flashReady to behave like the other events (uses setTimeout and the Event Queue).
  
  * --------- Revision 7.0 beta 2 -----------
  * = Changed ERROR_CODE_FILE_NOT_FOUND to ERROR_CODE_FILE_ID_NOT_FOUND
